2003-08-07  Breda McColgan  <breda.mccolgan@sun.com>

        * stickynotes/docs/C/stickynotes_applet.xml: updated for GNOME 2.4
        * stickynotes/docs/C/stickynotes_applet-C.omf: updated for GNOME 2.4
	* stickynotes/docs/C/l10n.txt: created this new file for GNOME 2.4
        * stickynotes/docs/C/figures/stickynotes_applet.png: updated for GNOME 2.4
	* stickynotes/docs/C/figures/preferences_dialog.png: deleted this file
	* stickynotes/docs/C/figures/note_menu.png: deleted this file
	* stickynotes/docs/C/figures/applet_menu.png: deleted this file

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* stickynotes.glade:  HIGify widget padding between the vbox and 
	action area of the dialogs.  Thanks to <chris@gnome-de.org> 
	Christian - Manny Calavera - Neumair.

2003-07-15  Loban Rahman <loban@earthling.net>

	* stickynotes_applet_callbacks.c: Updated about box description.
	* stickynotes.c, stickynotes_applet.c, stickynotes_applet_callbacks.c:
	  Cleaned up and simplified George's patch for key-writability.

2003-07-04  Loban Rahman <loban@earthling.net>

	* *.c: Fixed bug #115195. About box now longer crashes the applet when
	  showing it the second time. Also cleaned up other dialog and glade
	  code while at it.

2003-07-03  Loban Rahman <loban@earthling.net>

	* stickynotes_applet_callbacks.c: The resize bar and window
	  decorations now appear and disapper on mouseover AND focus
	  correctly. Basically, they will always appear if it is in either
	  mouseover or focus. Fixes bug #115317.
	* stickynotes.c, stickynotes_callbacks.c: The icons now change
	  size accordingly when themes like "Large Print" are chosen. They
	  don't yet change color when "Inverse" themes are chosen, that
	  still needs to be fixed by providing alternatives.
	* stickynotes.c, stickynotes_callbacks.c: The properties dialog of
	  each note are now easier to use. Pressing enter auto closes the
	  dialog.
	
Wed Jul 02 15:43:01 2003  George Lebl <jirka@5z.com>
