@@ -242,19 +242,19 @@ Template last modified Mar 12, 2002
 	    </varlistentry>
 	    <varlistentry> 
 		<term>Color</term> 
-		<listitem><para>Click on the color selector button to display the color selector dialog. On the color selector dialog, use the color wheel or spin boxes to choose the default base color of this sticky note.</para></listitem>
+		<listitem><para>Click on the color selector button to display the color selector dialog. On the color selector dialog, use the color wheel or spin boxes to choose the base color of this sticky note.</para></listitem>
 	    </varlistentry>
 	    <varlistentry> 
 		<term>Use default color</term> 
-		<listitem><para>Select this option to use the current system theme to determine the default base color of this sticky note.</para></listitem>
+		<listitem><para>Select this option to use the default base color of this sticky note.</para></listitem>
 	    </varlistentry>
 	    <varlistentry> 
 		<term>Font</term> 
-		<listitem><para>Click on the font selector button to display the font selector dialog. On the font selector dialog, use the list boxes to choose the default font of this sticky note.</para></listitem>
+		<listitem><para>Click on the font selector button to display the font selector dialog. On the font selector dialog, use the list boxes to choose the font of this sticky note.</para></listitem>
 	    </varlistentry>
 	    <varlistentry> 
 		<term>Use default font</term> 
-		<listitem><para>Select this option to use the current system theme to determine the default font of this sticky note.</para></listitem>
+		<listitem><para>Select this option to use the default font of this sticky note.</para></listitem>
 	    </varlistentry>
 	</variablelist> 
     </sect2>
