@@ -1,3 +1,8 @@
+2003-08-17  Loban A Rahman <loban@earthling.net>
+
+	* stickynotes/docs/C/stickynotes_applet.xml: Fixed some faulty wording
+	  in the "Advanced Settings" portion of Breda's documentation.
+
 2003-08-07  Breda McColgan  <breda.mccolgan@sun.com>
 
         * stickynotes/docs/C/stickynotes_applet.xml: updated for GNOME 2.4
